// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Represents customers of the sushi restaurant.
Ingredient: Represents ingredients used in sushi dishes.
Supplier: Represents a supplier for sushi ingredients.
Menu: Represents the menu of a sushi restaurant.
Restaurant: Represents a sushi restaurant with basic information.
MenuItem: Represents individual items in a menu.
Order: Represents customer orders at the restaurant.
OrderItem: Represents ordered items in a customer's order.
Rating: Represents the ratings given by customers for a sushi restaurant.
Reservation: Represents table reservations made by customers.
Shift: Represents shifts assigned to staff at the restaurant.
Staff: Represents the staff working at the sushi restaurant.
'''
}

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone_number VARCHAR 
    address VARCHAR 
    }

Table Ingredient {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    supplier_id INTEGER 
    price_per_unit DECIMAL 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    contact_number VARCHAR 
    }

Table Menu {
    id INTEGER [primary key]
    restaurant_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    available BOOLEAN 
    created_date DATE 
    }

Table Restaurant {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone_number VARCHAR 
    email VARCHAR 
    established_date DATE 
    is_chain BOOLEAN 
    }

Table MenuItem {
    id INTEGER [primary key]
    menu_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    price DECIMAL 
    is_vegan BOOLEAN 
    is_gluten_free BOOLEAN 
    }

Table Order {
    id INTEGER [primary key]
    restaurant_id INTEGER 
    customer_id INTEGER 
    order_date DATETIME 
    total_amount DECIMAL 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    menu_item_id INTEGER 
    quantity INTEGER 
    subtotal DECIMAL 
    }

Table Rating {
    id INTEGER [primary key]
    restaurant_id INTEGER 
    customer_id INTEGER 
    rating INTEGER 
    comment VARCHAR 
    }

Table Reservation {
    id INTEGER [primary key]
    restaurant_id INTEGER 
    customer_id INTEGER 
    reservation_date DATETIME 
    number_of_guests INTEGER 
    }

Table Shift {
    id INTEGER [primary key]
    staff_id INTEGER 
    start_time DATETIME 
    end_time DATETIME 
    }

Table Staff {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    job_title VARCHAR 
    restaurant_id INTEGER 
    hire_date DATE 
    salary DECIMAL 
    }



// Relationships
    Ref: Ingredient.(supplier_id) < Supplier.(id)
    Ref: Menu.(restaurant_id) < Restaurant.(id)
    Ref: MenuItem.(menu_id) < Menu.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: Order.(restaurant_id) < Restaurant.(id)
    Ref: OrderItem.(menu_item_id) < MenuItem.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: Rating.(customer_id) < Customer.(id)
    Ref: Rating.(restaurant_id) < Restaurant.(id)
    Ref: Reservation.(customer_id) < Customer.(id)
    Ref: Reservation.(restaurant_id) < Restaurant.(id)
    Ref: Shift.(staff_id) < Staff.(id)
    Ref: Staff.(restaurant_id) < Restaurant.(id)
